--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^6.25.0",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.4",
+    "vivus": "^0.4.3",
     "vue": "^2.5.0",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.6.1",
